--- a/admin/styles/globals.scss
+++ b/admin/styles/globals.scss
@@ -1,6 +1,6 @@
 @import "./variables.scss";
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
+@import url("https: //cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css");
 
 * {
   padding: 0;
@@ -9,48 +9,39 @@
   color: $text-dark;
 }
 
-
 body {
   font-family: $theme-font !important;
+  display: flex;
+  background-color: $bg-pureblack !important;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  position: fixed !important;
+
+  .ext_wrapper {
+    display: flex;
+    width: 99%;
+    height: 99%;
+    background-color: $bg-secondary;
+    border-radius: 1rem;
+    position: fixed !important;
+
+    main {
+      overflow-y: scroll;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+      height: inherit;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+  }
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
-
-#__next {
-  display: flex;
-  background-color: $bg-pureblack;
-  width: 100%;
-  height: 100%;
-  position: relative;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-}
-
-.ext_wrapper {
-  width: 98%;
-  height: 98%;
-  background-color: $bg-secondary;
-  display: flex;
-  margin: auto;
-  border-radius: 1rem;
-
-
-  main {
-    overflow-y: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    height: inherit;
-
-	&::-webkit-scrollbar {
-		display: none;
-	}
-  }
-}
-
-// .Center a:hover {
-// 	color: $theme-yellow;
-// }
